Gitlab/StatefulSet_gitlab.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: gitlab
  namespace: gitlab
spec:
  serviceName: "gitlab-ce"
  replicas: 1
  selector:
    matchLabels:
      app: gitlab
  template:
    metadata:
      labels:
        app: gitlab
    spec:
      nodeSelector:
        kubernetes.io/hostname: node2
      containers:
      - name: gitlab
        image: gitlab/gitlab-ce:17.11.0-ce.0
        resources:
          requests:
            memory: "2Gi"
            cpu: "500m"
          limits:
            memory: "4Gi"
            cpu: "2"
        ports:
        - name: ssh
          containerPort: 22
        - name: http
          containerPort: 8181
        volumeMounts:
        - name: gitlab-storage
          mountPath: /var/opt/gitlab
        - name: gitlab-log
          mountPath: /var/log/gitlab
      volumes:
      - name: gitlab-storage
        persistentVolumeClaim:
          claimName: gitlab-ce-gitlab-pvc
      - name: gitlab-log
        persistentVolumeClaim:
          claimName: gitlab-log-pvc
