Gitlab/service-gitlab.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-ce
  namespace: gitlab
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 8181
  selector:
    app: gitlab
