Gitlab/servive-gitlab_ssh.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-ssh
  namespace: gitlab
spec:
  type: NodePort
  ports:
  - name: ssh
    port: 22
    targetPort: 22
    nodePort: 30022  
  selector:
    app: gitlab
