Gitlab/igress-controller_gitlab.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab
  namespace: gitlab
spec:
  rules:
    - host: git-lab.devlaba.online
      http:
        paths:
          - path: /
            backend:
              serviceName: gitlab_ce
              servicePort: 80
