Gitlab/ingress-controller_gitlab.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab
  namespace: gitlab
spec:
  rules:
    - host: git-lab.devlaba.online
      http:
        paths:
          - path: /
            pathType: Prefix  
            backend:
              service:        
                name: gitlab-ce
                port:
                  number: 80
